Imitate exact game logic instead of own algorithm

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <div class="requirements-list"></div>
         <div id="summary" class="summary-text hidden"></div>
         <pre id="output"></pre>
+        <pre id="perfStats" style="color:darkgrey"></pre>
     </div>
 
     <datalist id="cardList"></datalist>
